//
// Copyright (c) 2025 Red Hat, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
// the License. You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
// an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
// specific language governing permissions and limitations under the License.
//

syntax = "proto3";

package private.v1;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "private/v1/metadata_type.proto";
import "shared/v1/condition_status_type.proto";

// Contains the details about the cluster that are available only for the system.
message Cluster {
  // Public data.
  string id = 1;
  Metadata metadata = 2;
  ClusterSpec spec = 3;
  ClusterStatus status = 4;
}

message ClusterSpec {
  // Copies of the public fields.
  string template = 1;
  map<string, google.protobuf.Any> template_parameters = 2;
  map<string, ClusterNodeSet> node_sets = 3;
}

message ClusterStatus {
  // Copies of the public fields.
  ClusterState state = 1;
  repeated ClusterCondition conditions = 2;
  string api_url = 3;
  string console_url = 4;
  map<string, ClusterNodeSet> node_sets = 5;

  // Identifier of the hub that was selected for this cluster.
  string hub = 6;
}

enum ClusterState {
  CLUSTER_STATE_UNSPECIFIED = 0;
  CLUSTER_STATE_PROGRESSING = 1;
  CLUSTER_STATE_READY = 2;
  CLUSTER_STATE_FAILED = 3;
}

message ClusterCondition {
  ClusterConditionType type = 1;
  shared.v1.ConditionStatus status = 2;
  google.protobuf.Timestamp last_transition_time = 3;
  optional string reason = 4;
  optional string message = 5;
}

enum ClusterConditionType {
  CLUSTER_CONDITION_TYPE_UNSPECIFIED = 0;
  CLUSTER_CONDITION_TYPE_PROGRESSING = 1;
  CLUSTER_CONDITION_TYPE_READY = 2;
  CLUSTER_CONDITION_TYPE_FAILED = 3;
  CLUSTER_CONDITION_TYPE_DEGRADED = 4;
}

message ClusterNodeSet {
  string host_class = 1;
  int32 size = 2;
}
